Changed block to dragon altar to test 3d custom blocks. Still need to fix culling and multi-block collisions

--- a/src/main/resources/assets/dragonrealm/lang/en_us.json
+++ b/src/main/resources/assets/dragonrealm/lang/en_us.json
@@ -5,5 +5,5 @@
 
   "itemgroup.pickaxe": "DragonRealm",
 
-  "block.dragonrealm.ruby_block": "Block of Ruby"
+  "block.dragonrealm.dragon_altar_block": "Dragon Altar"
 }
