Bunch of changes for adding 3d armor render. -This commit correctly renders 3d armor -Still missing armor inventory slot textures

--- a/src/main/resources/assets/dragonrealm/lang/en_us.json
+++ b/src/main/resources/assets/dragonrealm/lang/en_us.json
@@ -3,6 +3,11 @@
   "item.dragonrealm.dragon_shovel": "Dragon Shovel",
   "item.dragonrealm.dragon_axe": "Dragon Axe",
 
+  "item.dragonrealm.dragon_helmet": "Dragon Helmet",
+  "item.dragonrealm.dragon_chestplate": "Dragon Chestplate",
+  "item.dragonrealm.dragon_leggings": "Dragon Leggings",
+  "item.dragonrealm.dragon_boots": "Dragon Boots",
+
   "itemgroup.pickaxe": "DragonRealm",
 
   "block.dragonrealm.dragon_altar_block": "Dragon Altar"
