--- a/src/main/resources/assets/dragonrealm/lang/en_us.json
+++ b/src/main/resources/assets/dragonrealm/lang/en_us.json
@@ -1,9 +1,6 @@
 {
   "itemgroup.pickaxe": "DragonRealm",
 
-  "item.dragonrealm.dragon_pickaxe": "Dragon Pickaxe",
-  "item.dragonrealm.dragon_shovel": "Dragon Shovel",
-  "item.dragonrealm.dragon_axe": "Dragon Axe",
   "item.dragonrealm.dragon_steak": "Dragon Steak",
   "item.dragonrealm.dragon_horn_torch": "Dragon Horn Torch",
   "item.dragonrealm.dragon_backpack": "Dragon Backpack",
@@ -21,6 +18,7 @@
   "item.dragonrealm.dragon_ingot_spearhead": "Dragon Ingot Spearhead",
   "item.dragonrealm.dragon_bone_shaft": "Dragon Bone Shaft",
   "item.dragonrealm.dragon_bone_hilt": "Dragon Bone Hilt",
+  "item.dragonrealm.searing_iron_ingot": "Searing Iron Ingot",
 
   "item.dragonrealm.dragon_pickaxe": "Dragon Pickaxe",
   "item.dragonrealm.dragon_axe": "Dragon Axe",
