Added natural animation states to PorcupineEntity for head movement and walking.

--- a/src/main/resources/assets/dragonrealm/lang/en_us.json
+++ b/src/main/resources/assets/dragonrealm/lang/en_us.json
@@ -43,5 +43,7 @@
   "item.dragonrealm.dragon_hide_boots": "Dragon Hide Boots",
   "item.dragonrealm.dragon_hide_cape": "Dragon Hide Cape",
 
+  "item.dragonrealm.porcupine_spawn_egg": "Porcupine Spawn Egg",
+
   "block.dragonrealm.dragon_altar_block": "Dragon Altar"
 }
