Added DragonJawboneAxe. Renders correctly.

--- a/src/main/resources/assets/dragonrealm/lang/en_us.json
+++ b/src/main/resources/assets/dragonrealm/lang/en_us.json
@@ -22,7 +22,7 @@
   "item.dragonrealm.searing_iron_ingot": "Searing Iron Ingot",
 
   "item.dragonrealm.dragon_horn_pickaxe": "Dragon Horn Pickaxe",
-  "item.dragonrealm.dragon_bone_axe": "Dragon Bone Axe",
+  "item.dragonrealm.dragon_jawbone_axe": "Dragon Bone Axe",
   "item.dragonrealm.dragon_scale_shovel": "Dragon Scale Shovel",
   "item.dragonrealm.dragon_hoe": "Dragon Hoe",
 
