--- a/src/main/resources/assets/dragonrealm/lang/en_us.json
+++ b/src/main/resources/assets/dragonrealm/lang/en_us.json
@@ -20,6 +20,9 @@
   "item.dragonrealm.dragon_bone_shaft": "Dragon Bone Shaft",
   "item.dragonrealm.dragon_bone_hilt": "Dragon Bone Hilt",
   "item.dragonrealm.searing_iron_ingot": "Searing Iron Ingot",
+  "item.dragonrealm.ore_chunk_iron": "Iron Chunk",
+  "item.dragonrealm.ore_chunk_gold": "Gold Chunk",
+  "item.dragonrealm.ore_chunk_copper": "Copper Chunk",
 
   "item.dragonrealm.dragon_horn_pickaxe": "Dragon Horn Pickaxe",
   "item.dragonrealm.dragon_jawbone_axe": "Dragon Bone Axe",
@@ -28,6 +31,7 @@
   "item.dragonrealm.dragon_shovel": "Dragon Shovel",
   "item.dragonrealm.dragon_axe": "Dragon Axe",
   "item.dragonrealm.dragon_pickaxe": "Dragon Pickaxe",
+  "item.dragonrealm.smithing_hammer": "Smithing Hammer",
 
   "item.dragonrealm.dragon_club": "Dragon Club",
   "item.dragonrealm.dragon_spear": "Dragon Spear",
